# Skland-Auto-Sign-In

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Build and Release (Linux-x64 Only).yml  Build and Release.yml  Scheduled Auto Sign In.yml
src/: main.rs  network.rs  tools.rs  verification.rs
